--- a/examples/rollup/css/style.styl
+++ b/examples/rollup/css/style.styl
@@ -1,3 +1,7 @@
 body
-  background green
-  margin 0
+  background white
+  margin 50px
+  font-family sans-serif
+  text-align center
+  font-size 20px
+
