--- a/examples/mithril/css/ball.css
+++ b/examples/mithril/css/ball.css
@@ -8,7 +8,7 @@
   display: inline-block;
   width: 40px;
   height: 40px;
-  background: orange;
+  background: red;
   border-radius: 20px;
   animation: roll 3s infinite;
   animation-fill-mode: forwards;
